--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "eslint": "^4.17.0",
     "pug": "^2.0.0-rc.4",
     "vue": "^2.5.13",
-    "vue-router": "^2.8.1"
+    "vue-router": "^2.8.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
